--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,8 @@ addopts =
     --cov-report=xml
     --cov-fail-under=90
 testpaths = tests
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 markers =
     unit: Unit tests
     integration: Integration tests that require real resources
