fix: Align Flake8 configs and resolve GitHub Actions error
- Fix E226: Add whitespace around * operator in evaluation_framework.py
- Add Flake8 to pre-commit hooks to catch issues locally
- Sync GitHub Actions and local .flake8 configuration
- Pre-commit hooks now prevent CI/CD surprises

--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Code Quality - Flake8 Linting
       run: |
-        flake8 src/ tests/ --max-line-length=100 --ignore=E203,W503 --statistics
+        flake8 src/ tests/ --statistics
       continue-on-error: false
 
     - name: Type Checking - mypy
