fix: update quality gates summary to show actual status
- Remove hardcoded success checkmarks that mask real failures
- Add job status conditional to show accurate pipeline state
- Include documentation of all GitHub Actions fixes
- Update coverage.xml from latest test run

--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -149,11 +149,12 @@ jobs:
       if: always()
       run: |
         echo "🎯 Quality Gates Results:"
-        echo "├── ✅ Code Formatting (Black)"
-        echo "├── ✅ Code Linting (Flake8)"
-        echo "├── ✅ Security Scan (Bandit)"
-        echo "├── ✅ Unit Tests (90%+ Coverage)"
-        echo "├── ✅ Performance (<5s per test)"
-        echo "└── ✅ Documentation Check"
+        echo "This summary shows hardcoded success messages."
+        echo "Check individual step results above for actual status."
+        echo "Pipeline will fail if any critical step fails."
         echo ""
-        echo "🚀 Ready for Phase 2 development!"
+        if [ "${{ job.status }}" == "success" ]; then
+          echo "🚀 All quality gates passed - Ready for deployment!"
+        else
+          echo "❌ Some quality gates failed - Review errors above"
+        fi
