--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Core Framework
 crewai>=0.28.0
 crewai-tools==0.4.26
-langchain>=0.1.0
+langchain>=0.1.0,<0.3.0
 langchain-google-genai>=1.0.0
-langchain-openai>=0.1.0
+langchain-openai>=0.1.0,<0.2.0
 
 # Data Processing
 pydantic>=2.0.0
