--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,14 @@
-# Core Framework
+# Core Framework (Phase 2 essentials)
 crewai>=0.28.0
 crewai-tools==0.4.26
-langchain>=0.1.0,<0.3.0
+langchain==0.2.17
 langchain-google-genai>=1.0.0
-langchain-openai>=0.1.0,<0.2.0
+langchain-openai==0.1.17
 
 # Data Processing
 pydantic>=2.0.0
 pandas>=2.0.0
 pdfplumber>=0.9.0
-
-# PDF Report Generation
-reportlab>=4.0.4
-weasyprint>=60.0
-matplotlib>=3.7.0
-plotly>=5.17.0
-jinja2>=3.1.0
-html2text>=2020.1.16
-
-# Web Interface (Phase 4)
-streamlit>=1.28.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
 
 # Development & Testing
 pytest>=7.4.0
