fix: finalize ultra-minimal CI with all required tools
- Add flake8, mypy, bandit, types-requests to requirements-ci.txt
- Remove redundant tool installations from workflow
- All tools now installed once via requirements-ci.txt
- CI should complete in under 3 minutes with all quality gates

--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -17,3 +17,7 @@ python-dotenv==1.0.0
 black==25.1.0
 isort==6.0.1
 coverage==7.10.3
+flake8==7.0.0
+mypy==1.13.0
+bandit==1.7.10
+types-requests==2.32.4.20250611
