--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ pydantic>=2.0.0
 pandas>=2.0.0
 pdfplumber>=0.9.0
 
+# UI Framework (Phase 4)
+streamlit>=1.28.0
+plotly>=5.17.0
+
 # Development & Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
