fix: add missing dependencies and pytest configuration for CI
- Added streamlit and plotly to requirements-ci.txt for Phase 4 test compatibility
- Added asyncio marker to pytest.ini to support async test collection
- Resolves CI test failures: ModuleNotFoundError for streamlit and asyncio marker issues
- Ensures Phase 4 Streamlit app tests can run in CI environment

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,3 +17,4 @@ markers =
     integration: Integration tests that require real resources
     slow: Slow tests that take more than a few seconds
     llm: Tests requiring LLM API connections
+    asyncio: Async tests using asyncio
