--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -11,10 +11,13 @@ pdfplumber==0.11.0
 # Phase 4 UI dependencies (needed for tests)
 streamlit==1.38.0
 plotly==5.24.1
+matplotlib==3.8.4
+reportlab==4.2.5
 
 # Testing essentials only
 pytest==8.4.1
 pytest-cov==6.2.1
+pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 
 # Code quality essentials
