--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ pdfplumber>=0.9.0
 streamlit>=1.28.0
 plotly>=5.17.0
 
+# System Monitoring (Phase 5)
+psutil>=5.9.0
+
 # Development & Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
