--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -20,6 +20,9 @@ pytest-cov==6.2.1
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
 
+# Performance monitoring dependencies
+psutil>=5.9.0
+
 # Code quality essentials
 black==25.1.0
 isort==6.0.1
