docs: comprehensive documentation restructure and enhancement
- Root directory cleanup: removed 11 redundant markdown files
- Documentation standardization: converted all files to kebab-case naming
- Content deduplication: removed ~400 lines of duplicate content
- Enhanced documentation coverage: added 8 new comprehensive guides
  * User guide for accessibility professionals
  * API reference documentation with detailed methods
  * Architecture documentation with data flow diagrams
  * Practical examples and quick start guides
  * Reference materials for evaluation criteria
- Improved navigation and cross-references throughout docs/
- Maintained enterprise-grade documentation standards
- Organized docs into logical subdirectories for different audiences
- Applied code formatting via pre-commit hooks

Total impact: 65+ file operations resulting in cleaner, more comprehensive documentation ecosystem

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,11 @@ Thumbs.db
 # PyTest
 .pytest_cache/
 .coverage
+coverage.xml
 htmlcov/
+
+# MyPy
+.mypy_cache/
 
 # Streamlit
 .streamlit/
@@ -75,3 +79,14 @@ htmlcov/
 *.bak
 *.log
 test_report.txt
+test.txt
+
+# IDE and editor files
+*.swp
+*.swo
+*~
+.vscode/settings.json
+
+# Operating system files
+.DS_Store
+Thumbs.db
