--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,47 @@
-# Core Framework (Phase 2 essentials)
-crewai>=0.28.0
+# Core Framework Dependencies
+crewai==0.41.1
 crewai-tools==0.4.26
 langchain==0.2.17
-langchain-google-genai>=1.0.0
+langchain-google-genai==1.0.10
 langchain-openai==0.1.17
 
 # Data Processing
-pydantic>=2.0.0
-pandas>=2.0.0
-pdfplumber>=0.9.0
+pydantic==2.7.4
+pandas==2.1.4
+pdfplumber==0.11.0
 
-# UI Framework (Phase 4)
-streamlit>=1.28.0
-plotly>=5.17.0
+# Report Generation & Visualization
+reportlab==4.2.5
+matplotlib==3.8.4
+plotly==5.24.1
 
-# System Monitoring (Phase 5)
-psutil>=5.9.0
+# System Monitoring
+psutil==5.9.0
 
-# Development & Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
-python-dotenv>=1.0.0
+# Testing Dependencies
+pytest==8.4.1
+pytest-asyncio==0.21.1
+pytest-cov==6.2.1
+pytest-mock==3.11.0
+pytest-xdist==3.3.1
 
-# Code Quality & TDD Support
-black>=23.0.0
-isort>=5.12.0
-coverage>=7.3.0
+# Security & Code Quality
+safety==2.3.0
+bandit==1.7.10
+black==25.1.0
+isort==6.0.1
+coverage==7.10.3
+flake8==7.0.0
+mypy==1.13.0
+
+# Development Tools
+python-dotenv==1.0.0
+pre-commit==3.4.0
+
+# Testing Utilities
+factory-boy==3.3.0
+responses==0.23.0
+freezegun==1.2.0
+
+# Type Stubs
+types-requests==2.32.4.20250611
