--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -38,8 +38,8 @@ jobs:
         # Configure pip for faster, more reliable installation
         pip config set global.timeout 60
         pip config set global.retries 3
-        # Use minimal CI dependencies for faster installation
-        pip install -r requirements-ci.txt
+        # Install all dependencies from requirements.txt
+        pip install -r requirements.txt
 
     - name: Code Quality - Black Formatting Check
       run: |
@@ -68,8 +68,7 @@ jobs:
     - name: Unit Tests with Coverage
       timeout-minutes: 10  # Prevent test hangs
       run: |
-          run: |
-          python -m pytest tests/unit/ -v --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=90 --tb=short
+        python -m pytest tests/unit/ -v --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=90 --tb=short
       env:
         PYTHONPATH: ${{ github.workspace }}/src
 
